--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
 <h1> Welcome! </h1>
 
-<p> <%= link_to "Sign in with Google", new_session_path %> </p>
+<%= button_to "Log in with Google", provider_login_path  %>
