--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,1 +1,6 @@
 <h1> Welcome, <%= current_user.username %> to The Sunken Isles! </h1>
+
+<%= button_to "Create Campaign", new_campaign_path, method: :get %> <br>
+<%= button_to "Create Character", new_character_path, method: :get %>
+
+<h2> Your Active Campaigns </h2>
