--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -2,14 +2,14 @@
 
 <section class="campaign_form">
   <%= form_with url: campaigns_path, method: :post, data: {turbo: false} do |form| %>
-    <h2> Campaign Name </h2>
-    <%= form.text_field :name %> <br>
+    <h3> Campaign Name </h3>
+    <%= form.text_field :name %> <br><br>
 
-    <h2> Invite Players by Email </h2>
-    <%= form.text_field :player_1 %> <br><br>
-    <%= form.text_field :player_2 %> <br><br>
-    <%= form.text_field :player_3 %> <br><br>
-    <%= form.text_field :player_4 %> <br><br>
+    <h3> Invite Players by Email </h3>
+    Player 1: <%= form.text_field :player_1 %> <br><br>
+    Player 2: <%= form.text_field :player_2 %> <br><br>
+    Player 3: <%= form.text_field :player_3 %> <br><br>
+    Player 4: <%= form.text_field :player_4 %> <br><br>
 
     <%= form.submit "Create Campaign" %>
   <% end %>
