Update Controllers, Facades, Services, and Views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <section class="main_image">
-      <%= image_tag("https://d1wgd08o7gfznj.cloudfront.net/uploads/email_campaign/hero_image/8955/optimized_de5f342af424adb004d2a10671de1d6e_original.jpeg", :alt => "main logo", :class => "responsive") %>
+      <%= image_tag("https://d1wgd08o7gfznj.cloudfront.net/uploads/email_campaign/hero_image/8955/optimized_de5f342af424adb004d2a10671de1d6e_original.jpeg", :alt => "main logo", :class => "responsive", id: "main_logo") %>
     </section>
     <section class="main_content">
       <%= yield %>
