wip for image upload

--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -49,6 +49,9 @@
                 <h3>Character Class</h3>
                 <%= form.select :class, @classes, selected: @classes.first, class: "form-control" %> <br><br><br>
 
+                <h3>Character Image</h3>
+                <%= form.file_field :character_image, accept: 'image/png, image/gif, image/jpeg', class: "form-control" %> <br><br><br>
+
                 <%= form.submit "Create Character", class: "btn btn-primary" %>
             <% end %>
         </section>
