Add end of day CSS updates

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,22 +16,36 @@
 
 @import "bootstrap";
 
-body {
-  padding: 20px;
+#main_logo_bg {
+  background-color: #8d826e;
+  background-color: rgba(0, 0, 0, 0.75);
+  width: 100vw;
+  height: 125px;
+  z-index: 2;
 }
 
-.responsive {
-  display: block;
-  max-width: 1000px;
+.overlay-content {
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 600px;
   width: 100%;
-  height: auto;
   margin: 0 auto;
-  border-color: black;
-  border-style: solid;
+  align-content: center;
+  justify-content: center;
+}
+
+.inner_bg {
+  background-color: #8d826e;
+  border: 3px solid black;
+  min-height: 250px;
+  align-content: center;
+  justify-content: center;
 }
 
 .main_content{
-  padding: 10%;
+  padding: 3%;
   margin: 0 auto;
   width: 90%;
 }
@@ -49,3 +63,18 @@ body {
   align-items: center;
   text-align: center;
  }
+
+
+.btn {
+  margin-top: 10px; /* Add some margin between buttons */
+}
+
+.campaign-form {
+  background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  width: 100%;
+  margin: 0 auto;
+}
