--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,1 +1,3 @@
-      <%= image_tag("main_logo.png", :alt => "main logo", :class => "responsive", id: "main_logo") %>
+<section id="main_logo_bg">
+      <%= image_tag("main_logo.png", :alt => "main logo", id: "main_logo") %>
+</section>
