--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,7 @@
-<div class="overlay-content justify-content-center">
-  <h1> Welcome to The Sunken Isles First Mate Application! </h1>
-  <%= link_to "Sign in with GitHub",
-  "https://github.com/login/oauth/authorize?client_id=Ov23lisDr3te8NGMI0MW&scope=repo" %>
+<div class="container">
+  <section class="overlay-content">
+    <h1> Welcome to The Sunken Isles First Mate Application! </h1>
+    <%= link_to "Sign in with GitHub",
+    "https://github.com/login/oauth/authorize?client_id=Ov23lisDr3te8NGMI0MW&scope=repo" %>
+  </section>
 </div>
