--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -4,14 +4,13 @@
         <h1>Welcome, <%= current_user.username %> to The Sunken Isles!</h1>
         <br>
         <%= button_to "Create Campaign", new_campaign_path, method: :get, class: "btn btn-primary" %> <br>
-        <%= button_to "Create Character", new_character_path, method: :get, class: "btn btn-secondary" %>
         <br>
     </div>
   </div>
 
   <div class="row">
     <div class="col-4">
-      <section id="DM Campaigns">
+      <section id="dm-campaigns">
         <h3>DM Campaigns</h3>
         <ul>
           <% current_user.dm_campaigns.each do |campaign| %>
@@ -22,7 +21,7 @@
     </div>
 
     <div class="col-4">
-      <section id="Player Campaigns">
+      <section id="party-campaigns">
         <h3>Party Campaigns</h3>
         <ul>
           <% current_user.party_campaigns.each do |campaign| %>
@@ -33,7 +32,7 @@
     </div>
 
     <div class="col-4">
-      <section id="Invited Campaigns">
+      <section id="invited-campaigns">
         <h3>Invited Campaigns</h3>
         <ul>
           <% current_user.invited_campaigns.each do |campaign| %>
