--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,6 +36,11 @@
   justify-content: center;
 }
 
+.card {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+}
+
 .inner_bg {
   background-color: #8d826e;
   border: 3px solid black;
@@ -62,8 +67,8 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  color: white;
  }
-
 
 .btn {
   margin-top: 10px; /* Add some margin between buttons */
@@ -77,4 +82,26 @@ body {
   max-width: 600px;
   width: 100%;
   margin: 0 auto;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: white;
+}
+
+nav li {
+  padding-left: 20%;
+}
+
+.navbar-nav .nav-item .nav-link {
+  color: white; /* Adjust the color as needed */
+}
+
+.navbar-nav .nav-item .nav-link:hover {
+  color: lightgray; /* Adjust the hover color as needed */
 }
