--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,3 +1,3 @@
 <section id="main_logo_bg">
-      <%= image_tag("main_logo.png", :alt => "main logo", id: "main_logo") %>
+  <%= image_tag("main_logo.png", :alt => "main logo", id: "main_logo", class: "img-fluid") %>
 </section>
