--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,19 @@
 <div class="nav-container min-vw-100">
-  <nav class="navbar navbar-expand-lg navbar-light bg-dark text-start justify-content-center">
-    <ul class="nav navbar-nav pull-right">
-      <li><%= link_to 'Home', root_path, style: 'pull-right' %></li>
-    </ul>
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><%= link_to 'Home', root_path, class: 'nav-link' %></li>
+        <% if current_user %>
+          <li class="nav-item"><%= link_to 'Dashboard', dashboard_path, class: 'nav-link' %></li>
+          <% if current_campaign_id %>
+            <li class="nav-item"><%= link_to 'Dashboard', dashboard_path, class: 'nav-link' %></li>
+            <li class="nav-item"><%= link_to 'Dashboard', dashboard_path, class: 'nav-link' %></li>
+          <% end %>
+        <% end %>
+      </ul>
+    </div>
   </nav>
 </div>
