--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,19 +1,15 @@
 <div class="nav-container min-vw-100">
   <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><%= link_to 'Home', root_path, class: 'nav-link' %></li>
-        <% if current_user %>
-          <li class="nav-item"><%= link_to 'Dashboard', dashboard_path, class: 'nav-link' %></li>
-          <% if current_campaign_id %>
-            <li class="nav-item"><%= link_to 'Dashboard', dashboard_path, class: 'nav-link' %></li>
-            <li class="nav-item"><%= link_to 'Dashboard', dashboard_path, class: 'nav-link' %></li>
-          <% end %>
+    <ul class="nav-flex navbar-nav">
+      <li class="nav-item"><%= link_to 'Home', root_path, class: 'nav-link' %></li>
+      <% if current_user %>
+        <li class="nav-item"><%= link_to 'Dashboard', dashboard_path, class: 'nav-link' %></li>
+        <% if current_campaign_id %>
+          <li class="nav-item"><%= link_to 'Summary', campaign_summary_path(current_campaign_id), class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to 'Management', campaign_management_path(current_campaign_id), class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to 'Party', campaign_party_path(current_campaign_id), class: 'nav-link' %></li>
         <% end %>
-      </ul>
-    </div>
+      <% end %>
+    </ul>
   </nav>
 </div>
