Update local host references to Heroku site

--- a/app/views/party/index.html.erb
+++ b/app/views/party/index.html.erb
@@ -12,7 +12,7 @@
             <div class="card-body d-flex">
               <% if character.image_url %>
                 <div class="col">
-                  <%= image_tag("http://localhost:3000/#{character.image_url}", alt: character.name, class: "img-fluid card-img-start") %>
+                  <%= image_tag("https://first-mate-be-1f1d4528b074.herokuapp.com/#{character.image_url}", alt: character.name, class: "img-fluid card-img-start") %>
                 </div>
               <% end %>
               <div class="col">
