--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,5 +3,6 @@
     <h1> Welcome to The Sunken Isles First Mate Application! </h1>
     <%= link_to "Sign in with GitHub",
     "https://github.com/login/oauth/authorize?client_id=Ov23lisDr3te8NGMI0MW&scope=repo" %>
+    <%= button_to "Log in with Google", '/auth/google_oauth2'  %>
   </section>
 </div>
