--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,7 @@
           <li class="nav-item"><%= link_to 'Management', campaign_management_path(current_campaign_id), class: 'nav-link' %></li>
           <li class="nav-item"><%= link_to 'Party', campaign_party_path(current_campaign_id), class: 'nav-link' %></li>
         <% end %>
+        <li class="nav-item"><%= link_to 'Log Out', logout_path, data: {turbo_method: :get}, class: 'nav-link' %></li>
       <% end %>
     </ul>
   </nav>
