--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,21 @@
 <div class="container">
   <section class="overlay-content">
     <h1> Welcome to The Sunken Isles First Mate Application! </h1>
-    <%= link_to "Sign in with GitHub",
-    "https://github.com/login/oauth/authorize?client_id=Ov23lisDr3te8NGMI0MW&scope=repo" %>
+
+    <%= form_with url: sessions_path, method: :post, data: {turbo: false} do |form| %>
+      <%= form.label :username, "Username:" %> <br>
+      <%= form.text_field :username %> <br>
+      <br>
+      <%= form.label :password, "Password:" %> <br>
+      <%= form.password_field :password %> <br>
+      <br>
+      <%= form.submit "Login" %>
+    <% end %>
+
+    <%= link_to "Create an Account", new_user_path %>
+    <br>
+    <br>
+
     <%= button_to "Log in with Google", '/auth/google_oauth2'  %>
   </section>
 </div>
