--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,15 +14,88 @@
  *= require_self
  */
 
-@import "bootstrap";
+ @import "bootstrap";
 
-#main_logo_bg {
-  background-color: #8d826e;
-  background-color: rgba(0, 0, 0, 0.75);
-  width: 100vw;
-  height: 125px;
-  z-index: 2;
-}
+ #main_logo_bg {
+   width: 100%;
+   height: 125px;
+   z-index: 2;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+ }
+ 
+ #main_logo {
+   max-width: 100%;
+   height: auto;
+ }
+ 
+ .bg-dark {
+   background-color: rgba(0, 0, 0, 0.75) !important; /* Semi-transparent dark background */
+ }
+ 
+ .nav-link {
+   color: white;
+   padding: 0.5rem 1rem;
+ }
+ 
+ .nav-link:hover {
+   color: lightgray;
+ }
+ 
+ .container-fluid {
+   padding: 0;
+ }
+ 
+ .row.no-gutters {
+   margin: 0;
+ }
+ 
+ .col {
+   padding: 0.5rem; /* Buffer between links and edge of the screen */
+ }
+ 
+ @media (max-width: 768px) {
+   .row.no-gutters {
+     flex-direction: column;
+   }
+ 
+   .col-md-4 {
+     width: 100%;
+     padding: 0.5rem 0;
+   }
+ 
+   .navbar-nav {
+     display: none;
+   }
+ 
+   .navbar-toggler {
+     display: block;
+     background: none;
+     border: none;
+     color: white;
+     font-size: 1.5rem;
+   }
+ 
+   .navbar-toggler:focus {
+     outline: none;
+   }
+ 
+   .navbar-toggler-icon {
+     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+   }
+ 
+   .navbar-collapse {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+   }
+ 
+   .navbar-collapse .nav-link {
+     width: 100%;
+     text-align: center;
+   }
+ }
 
 .overlay-content {
   color: white;
