--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,3 +1,66 @@
-<section id="main_logo_bg">
-  <%= image_tag("main_logo.png", :alt => "main logo", id: "main_logo", class: "img-fluid") %>
-</section>
+<div class="container-fluid p-0 d-none d-lg-block">
+  <div class="row no-gutters">
+    <div class="col-md-4 d-flex justify-content-around align-items-center bg-dark py-2">
+      <div class="col d-flex justify-content-center align-items-center">
+        <% if !current_user %>
+          <%= link_to 'Home', root_path, class: 'nav-link' %>
+        <% elsif current_user %>
+          <%= link_to 'Dashboard', dashboard_path, class: 'nav-link' %>
+        <% end %>
+      </div>
+      <div class="col d-flex justify-content-center align-items-center">
+        <% if current_campaign_id %>
+          <%= link_to 'Summary', campaign_summary_path(current_campaign_id), class: 'nav-link' %>
+        <% end %>
+      </div>
+    </div>
+    <div class="col-md-4 d-flex justify-content-center align-items-center bg-dark py-2">
+      <section id="main_logo_bg">
+        <%= image_tag("main_logo.png", alt: "main logo", id: "main_logo", class: "img-fluid") %>
+      </section>
+    </div>
+    <div class="col-md-4 d-flex justify-content-around align-items-center bg-dark py-2">
+      <div class="col d-flex justify-content-center align-items-center">
+        <% if current_campaign_id %>
+          <%= link_to 'Management', campaign_management_path(current_campaign_id), class: 'nav-link' %>
+        <% end %>
+      </div>
+      <div class="col d-flex justify-content-center align-items-center">
+        <% if current_campaign_id %>
+          <%= link_to 'Party', campaign_party_path(current_campaign_id), class: 'nav-link' %>
+        <% end %>
+      </div>
+      <div class="col d-flex justify-content-center align-items-center">
+        <% if current_user %>
+          <%= link_to 'Log Out', logout_path, data: { turbo_method: :get }, class: 'nav-link' %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark d-lg-none">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
+      <% if !current_user %>
+        <li class="nav-item"><%= link_to 'Home', root_path, class: 'nav-link' %></li>
+      <% elsif current_user %>
+        <li class="nav-item"><%= link_to 'Dashboard', dashboard_path, class: 'nav-link' %></li>
+        <% if current_campaign_id %>
+          <li class="nav-item"><%= link_to 'Summary', campaign_summary_path(current_campaign_id), class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to 'Management', campaign_management_path(current_campaign_id), class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to 'Party', campaign_party_path(current_campaign_id), class: 'nav-link' %></li>
+        <% end %>
+        <li class="nav-item"><%= link_to 'Log Out', logout_path, data: { turbo_method: :get }, class: 'nav-link' %></li>
+      <% end %>
+    </ul>
+  </div>
+      <div class="col-md-4 d-flex justify-content-center align-items-center bg-dark py-2">
+      <section id="main_logo_bg">
+        <%= image_tag("main_logo.png", alt: "main logo", id: "main_logo", class: "img-fluid") %>
+      </section>
+    </div>
+</nav>
