--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <%= render partial: "shared/banner" %>
+  <%# render partial: "shared/banner" %>
+  <%= render partial: "shared/navbar" %>
 
   <body>
     <section class="main_content">
